--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,9 +1,10 @@
 reintroduce match processed, but on ranking level
 when upgrading, remember to enable all products
 when upgrading, set last_login_time to when they bought last subscription
+when upgrading, set last_subscribe date to now()
 
 == NOTES TO LATER ==
-checkup on nemtilmeld.dk, seems to be an okay project to optimize events
+export users in csv for events
 check doctrine:schema:validate if there is any problems
 on cancel order, is the delivered mail sent, that seems like a bug
 match integration facebook, share match
