--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -4,6 +4,7 @@ when upgrading, set last_login_time to when they bought last subscription
 when upgrading, set last_subscribe date to now()
 
 == NOTES TO LATER ==
+remove all box-03 styles
 export users in csv for events
 check doctrine:schema:validate if there is any problems
 on cancel order, is the delivered mail sent, that seems like a bug
