--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,7 +1,7 @@
 reintroduce match processed, but on ranking level
 when upgrading, remember to enable all products
 when upgrading, set last_login_time to when they bought last subscription
-when upgrading, set last_subscribe date to now()
+when upgrading, set last_subscribe date to start_date
 
 == NOTES TO LATER ==
 remove all box-03 styles
