--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -4,6 +4,7 @@ when upgrading, set last_login_time to when they bought last subscription
 when upgrading, set last_subscribe date to start_date
 
 == NOTES TO LATER ==
+add ranking on remake script
 should be able to delete users from user members list
 autocomplete to add users to group
 check doctrine:schema:validate if there is any problems
