Fixed minor bugs in form.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
-add ranking on remake script
+add event on remake script
+add fields on remake script
 when upgrading, remember to enable all products
 when upgrading, set last_login_time to when they bought last subscription
 when upgrading, set last_subscribe date to start_date
