--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -3,6 +3,8 @@ when upgrading, set last_login_time to when they bought last subscription
 when upgrading, set last_subscribe date to start_date
 
 == NOTES TO LATER ==
+validate booking confirm message, which name is listed where?
+dont show that many minutes in booking interval
 find a way to have default country, event and create user
 see if there is a easier way to print page headers, stupid to print the html on all pages
 check doctrine:schema:validate if there is any problems
