--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -5,6 +5,7 @@ when upgrading, set last_login_time to when they bought last subscription
 when upgrading, set last_subscribe date to start_date
 
 == NOTES TO LATER ==
+make sure only one can have the field at the time
 validate booking confirm message, which name is listed where?
 dont show that many minutes in booking interval
 find a way to have default country, event and create user
