Improved event form.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,3 +1,4 @@
+obey rules of event
 when upgrading, remember to enable all products
 when upgrading, set last_login_time to when they bought last subscription
 when upgrading, set last_subscribe date to start_date
