Obey rules of last subscribe.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,9 +1,9 @@
-obey rules of event
 when upgrading, remember to enable all products
 when upgrading, set last_login_time to when they bought last subscription
 when upgrading, set last_subscribe date to start_date
 
 == NOTES TO LATER ==
+add coming events to dashboard
 make sure only one can have the field at the time
 dont show that many minutes in booking interval
 see if there is a easier way to print page headers, stupid to print the html on all pages
