--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -3,6 +3,9 @@ when upgrading, set last_login_time to when they bought last subscription
 when upgrading, set last_subscribe date to start_date
 
 == NOTES TO LATER ==
+view posts from user on users profile
+build rss feed for blog
+build personal rss feeds
 add coming events to dashboard
 make sure only one can have the field at the time
 dont show that many minutes in booking interval
