--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -3,6 +3,9 @@ when upgrading, set last_login_time to when they bought last subscription
 when upgrading, set last_subscribe date to start_date
 
 == NOTES TO LATER ==
+view recent matches from players that you have played within the last few months
+make like buttons on blog posts
+build a league system, with both single and doubles
 view posts from user on users profile
 build rss feed for blog
 build personal rss feeds
