--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,13 +1,15 @@
+view posts from user on users profile
+build personal rss feeds
+remake users page to activity log
 when upgrading, remember to enable all products
 when upgrading, set last_login_time to when they bought last subscription
 when upgrading, set last_subscribe date to start_date
 
 == NOTES TO LATER ==
+show male or female icon on member show
 view recent matches from players that you have played within the last few months
 make like buttons on blog posts
 build a league system, with both single and doubles
-view posts from user on users profile
-build personal rss feeds
 add coming events to dashboard
 make sure only one can have the field at the time
 dont show that many minutes in booking interval
