Added user activity log.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,11 +1,11 @@
 view posts from user on users profile
 build personal rss feeds
-remake users page to activity log
 when upgrading, remember to enable all products
 when upgrading, set last_login_time to when they bought last subscription
 when upgrading, set last_subscribe date to start_date
 
 == NOTES TO LATER ==
+should not be able to delete bookings in past
 show male or female icon on member show
 view recent matches from players that you have played within the last few months
 make like buttons on blog posts
