--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -7,7 +7,7 @@ view recent matches from players that you have played within the last few months
 add coming events to dashboard
 see if there is a easier way to print page headers, stupid to print the html on all pages
 translation checkout the entire system
-make like buttons on blog posts
+rethink the idea about the market
 ---
 build a league system, with both single and doubles
 make sure only one can have the field at the time
