--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -3,13 +3,13 @@ when upgrading, set last_login_time to when they bought last subscription
 when upgrading, set last_subscribe date to start_date
 
 == NOTES TO LATER ==
-view recent matches from players that you have played within the last few months
 rethink the idea about the market, name could be exchange
-has to improve quick search form
 find a way to brand the project
 dont show that many minutes in booking interval
 translation checkout the entire system
 ---
+add a connected table, to make it quick to see hows connected, will make the activity log much easier and faster
+view recent matches from players that you have played within the last few months
 see if there is a easier way to print page headers, stupid to print the html on all pages
 integrate twitter as well
 build a league system, with both single and doubles
