--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -3,6 +3,7 @@ when upgrading, set last_login_time to when they bought last subscription
 when upgrading, set last_subscribe date to start_date
 
 == NOTES TO LATER ==
+support for multiple locations?
 rethink the idea about the market, name could be exchange
 find a way to brand the project
 dont show that many minutes in booking interval
