--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -11,6 +11,7 @@ add activity log to dashboard, all coming:
 support for multiple locations?
 translation checkout the entire system
 ---
+might be able to use <dl class="dl-horizontal"> in some lists
 add a connected table, to make it quick to see hows connected, will make the activity log much easier and faster
 view recent matches from players that you have played within the last few months
 see if there is a easier way to print page headers, stupid to print the html on all pages
